smart_env_monitor/.metadata/.plugins/org.eclipse.cdt.ui/mq35.build.log
15:33:14 **** Build of configuration Debug for project mq35 ****
make -j28 all 
arm-none-eabi-gcc "../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.d" -MT"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.o"
arm-none-eabi-gcc "../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.d" -MT"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.o"
arm-none-eabi-gcc "../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.d" -MT"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
../Core/Src/system_stm32f4xx.c: In function 'SystemCoreClockUpdate':
../Core/Src/system_stm32f4xx.c:265:3: error: expected declaration or statement at end of input
  265 |   SystemCoreClock >>= tmp;
      |   ^~~~~~~~~~~~~~~
../Core/Src/system_stm32f4xx.c: At top level:
../Core/Src/system_stm32f4xx.c:265:3: fatal error: closing dependency file Core/Src/system_stm32f4xx.d: No space left on device
compilation terminated.
make: *** [Core/Src/subdir.mk:34: Core/Src/system_stm32f4xx.o] Error 1
make: *** Waiting for unfinished jobs....
../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c:1106:1: fatal error: error writing to C:\Users\sakshi\AppData\Local\Temp\ccQu8sAF.s: No space left on device
 1106 | }
      | ^
compilation terminated.
../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c:3357:1: fatal error: error writing to C:\Users\sakshi\AppData\Local\Temp\ccubApgJ.s: No space left on device
 3357 | }
      | ^
compilation terminated.
make: *** [Drivers/STM32F4xx_HAL_Driver/Src/subdir.mk:67: Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.o] Error 1
make: *** [Drivers/STM32F4xx_HAL_Driver/Src/subdir.mk:67: Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.o] Error 1
../Core/Src/main.c:314:1: fatal error: error writing to C:\Users\sakshi\AppData\Local\Temp\ccKRIj8K.s: No space left on device
  314 | }
      | ^
compilation terminated.
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c:3793:1: fatal error: error writing to C:\Users\sakshi\AppData\Local\Temp\ccAAvrXH.s: No error
 3793 | }
      | ^
compilation terminated.
make: *** [Drivers/STM32F4xx_HAL_Driver/Src/subdir.mk:67: Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.o] Error 1
"make -j28 all" terminated with exit code 2. Build might be incomplete.

15:33:14 Build Failed. 12 errors, 0 warnings. (took 461ms)

